@@ -107,9 +107,12 @@ THE POSSIBILITY OF SUCH DAMAGE.
                 <version>3.8.0</version>
                 <configuration>
                     <compilerVersion>${javac.target}</compilerVersion>
-                    <release>${javac.target}</release>
+                    <source>${javac.target}</source>
+                    <target>${javac.target}</target>
+                    <!-- release>${javac.target}</release -->
                     <compilerArgs>
                         <arg>--enable-preview</arg>
+                        <arg>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
                         <arg>-h</arg>
                         <arg>${project.build.directory}/header</arg>
                     </compilerArgs>
